--- a/War.vcxproj.filters
+++ b/War.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="Arrow.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Admin.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="War.cpp">
@@ -81,6 +84,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Arrow.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Admin.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
