--- a/War.vcxproj
+++ b/War.vcxproj
@@ -46,7 +46,7 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
-    <UseOfMfc>Dynamic</UseOfMfc>
+    <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -194,6 +194,7 @@
     <ClInclude Include="CMyRoleSign.h" />
     <ClInclude Include="EasySize.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="HelpDialog.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
@@ -210,6 +211,7 @@
     <ClCompile Include="CEnemy.cpp" />
     <ClCompile Include="CMyRole.cpp" />
     <ClCompile Include="CMyRoleSign.cpp" />
+    <ClCompile Include="HelpDialog.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -248,8 +250,11 @@
     <Image Include="res\me.bmp" />
     <Image Include="res\meSign.bmp" />
     <Image Include="res\numm.bmp" />
+    <Image Include="res\rush.bmp" />
+    <Image Include="res\rushEvent.bmp" />
     <Image Include="res\save.bmp" />
     <Image Include="res\saveEvent.bmp" />
+    <Image Include="res\strenth.bmp" />
     <Image Include="res\test.bmp" />
     <Image Include="res\ui.bmp" />
     <Image Include="res\uii.bmp" />
