--- a/War.vcxproj.filters
+++ b/War.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="HelpDialog.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="AFirst.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="War.cpp">
@@ -105,6 +108,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="HelpDialog.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="AFirst.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
